--- a/styles/global/globals.scss
+++ b/styles/global/globals.scss
@@ -9,7 +9,8 @@ font-family: 'Raleway', sans-serif;
 $fontAwesome-mobile: 20px;
 
 html,
-body {
+body,
+ul {
   // font-size: $text;
   color: $color-primary;
   padding: 0;
@@ -18,11 +19,16 @@ body {
 }
 
 h1 {
+  margin-top: 30px;
   font-size: $main-heading;
 }
 
 h2 {
   font-size: $sub-heading;
+}
+
+ul {
+  list-style: none;
 }
 
 * {
