--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -3,7 +3,7 @@
 .hero {
   
   .bgWrapper {
-    position: fixed;
+    position: absolute;
     top: 36px + 70px;
     height: 60vh;
     width: 100vw;
