fixed travel images width

--- a/styles/components/TravelTips.module.scss
+++ b/styles/components/TravelTips.module.scss
@@ -1,11 +1,12 @@
 @import '../global/variables.module.scss';
 
 .travelTips {
-  margin-top: 255px;
+  margin-top: 350px;
 
   .image {
     position: relative;
     margin-bottom: 20px;
+    min-width: 100%;
 
     .imageTag {
       color: white;
