--- a/styles/components/Navbar.module.scss
+++ b/styles/components/Navbar.module.scss
@@ -1,12 +1,12 @@
 @import '../global/variables.module.scss';
 
 .nav {
-  padding: 20px 10px;
+  padding: 20px 25px;
 
   .container {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 
     .navMenu {
       display: flex;
