--- a/styles/components/TravelTips.module.scss
+++ b/styles/components/TravelTips.module.scss
@@ -1,7 +1,7 @@
 @import '../global/variables.module.scss';
 
 .travelTips {
-  margin-top: 350px;
+  // margin-top: 190px;
 
   .image {
     position: relative;
