--- a/styles/global/variables.module.scss
+++ b/styles/global/variables.module.scss
@@ -2,6 +2,7 @@
 
 // FONT-AWESOME
 $fontAwesome-mobile: 22px;
+$fontAwesome-btnIcon: 25px;
 
 // FONT-SIZES MOBILE
 $main-heading: 22px;
@@ -12,3 +13,4 @@ $text: 16px;
 $color-primary: #213058;
 $color-secondary: #C83259;
 $color-bg: #F1F1F1;
+$color-green: #28696A;
