--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -3,6 +3,7 @@
   border-top: 1px solid #DDD;
   display: flex;
   flex-direction: column;
+  flex: 1;
   align-items: center;
   text-align: center;
 
