--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -1,9 +1,9 @@
 .footer {
-  padding-top: 25px;
+  padding-top: 50px;
   border-top: 1px solid #DDD;
   display: flex;
+  justify-content: flex-end;
   flex-direction: column;
-  flex: 1;
   align-items: center;
   text-align: center;
 
