--- a/styles/global/globals.scss
+++ b/styles/global/globals.scss
@@ -10,7 +10,9 @@ $fontAwesome-mobile: 20px;
 
 html,
 body,
-ul {
+ul,
+input,
+textarea {
   // font-size: $text;
   color: $color-primary;
   padding: 0;
@@ -18,9 +20,12 @@ ul {
   font-family: 'Nunito', sans-serif;
 }
 
+body {
+  height: 100%;
+}
 
 h1 {
-  margin-top: 30px;
+  margin: 40px 0;
   font-size: $main-heading;
 }
 
