--- a/styles/components/Admin.module.scss
+++ b/styles/components/Admin.module.scss
@@ -4,37 +4,31 @@
   margin: 0 auto;
   background: $color-bg;
   border: none;
-  border-radius: 10px;
   max-width: 420px;
 
   .heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: $color-primary;
     color: white;
-    text-align: center;
-    padding: 10px;
-    border-radius: 10px 10px 0 0;
+    padding: 2px 0;
 
     h2 {
-      font-weight: 400;
-      margin: 0;
+      margin-left: 10px;
     }
   }
 
   .wrapper {
-    display: flex;
     margin: 0 auto;
     flex-direction: column;
     padding: 40px 0;
     max-width: 80%;
 
-    label {
-      margin: 20px 0 0;
+    .inputs {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
-
-    label:first-of-type {
-      margin: 0;
-    }
-
-    
   }
 }
