--- a/styles/components/SearchForm.module.scss
+++ b/styles/components/SearchForm.module.scss
@@ -13,7 +13,6 @@
     width: 90%;
     margin: auto;
 
-
     .inputWrap {
       position: relative;
 
@@ -26,6 +25,7 @@
       }
 
       input {
+        background-color: white;
         font-size: $sub-heading;
         padding-left: 45px;
         height: 40px;
