--- a/styles/components/Admin.module.scss
+++ b/styles/components/Admin.module.scss
@@ -30,5 +30,13 @@
       flex-direction: column;
       align-items: center;
     }
+
+    
+
+    .loginMessage {
+      padding-top: 1rem;
+      text-align: center;
+      color: $color-secondary;
+    }
   }
 }
