login working and displaying pages accordingly

--- a/styles/components/Admin.module.scss
+++ b/styles/components/Admin.module.scss
@@ -31,11 +31,16 @@
       align-items: center;
     }
 
-    
-
-    .loginMessage {
+    .success, .error {
       padding-top: 1rem;
       text-align: center;
+    }
+
+    .success {
+      color: $color-green;
+    }
+
+    .error {
       color: $color-secondary;
     }
   }
