--- a/styles/components/Admin.module.scss
+++ b/styles/components/Admin.module.scss
@@ -1,47 +1,18 @@
 @import '../global/variables.module.scss';
 
-.form {
-  margin: 0 auto;
-  background: $color-bg;
-  border: none;
-  max-width: 420px;
-
-  .heading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: $color-primary;
-    color: white;
-    padding: 2px 0;
-
-    h2 {
-      margin-left: 10px;
-    }
-  }
-
-  .wrapper {
-    margin: 0 auto;
-    flex-direction: column;
-    padding: 40px 0;
-    max-width: 80%;
-
-    .inputs {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .success, .error {
-      padding-top: 1rem;
-      text-align: center;
-    }
-
-    .success {
-      color: $color-green;
-    }
-
-    .error {
-      color: $color-secondary;
-    }
+.admin {
+  
+  h1 {
+    margin-bottom: 20px;
   }
 }
+
+.list {
+  padding: 15px;
+  background: $color-bg;
+
+  .listItem {
+    margin: 20px 10px;
+  }
+}
+
