--- a/styles/global/variables.module.scss
+++ b/styles/global/variables.module.scss
@@ -14,3 +14,21 @@ $color-primary: #213058;
 $color-secondary: #C83259;
 $color-bg: #F1F1F1;
 $color-green: #28696A;
+
+/*    MIXINS    */
+
+@mixin tablet-portrait {
+  @media (min-width: 480px) { @content; }
+}
+
+@mixin tablet-landscape {
+  @media (min-width: 900px) { @content; }
+}
+
+@mixin desktop-small {
+  @media (min-width: 1200px) { @content; }
+}
+
+@mixin desktop-large {
+  @media (min-width: 1800px) { @content; }
+}
