--- a/styles/pages/SearchForm.module.scss
+++ b/styles/pages/SearchForm.module.scss
@@ -6,6 +6,12 @@
   background-color: $color-bg;
   width: 90%;
   border-radius: 10px;
+  box-shadow: 5px 5px 10px rgba(0,0,0,.5);
+
+  @include tablet-portrait {
+    max-width: 430px;
+    margin-top: 80px;
+  }
 
   .form {
     display: flex;
