--- a/styles/components/Login.module.scss
+++ b/styles/components/Login.module.scss
@@ -1,47 +1,51 @@
 @import '../global/variables.module.scss';
 
-.form {
+.wrapper {
+  max-width: 350px;
   margin: 0 auto;
-  background: $color-bg;
-  border: none;
-  max-width: 420px;
 
-  .heading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: $color-primary;
-    color: white;
-    padding: 2px 0;
-
-    h2 {
-      margin-left: 10px;
-    }
-  }
-
-  .wrapper {
-    margin: 0 auto;
-    flex-direction: column;
-    padding: 40px 0;
-    max-width: 80%;
-
-    .inputs {
+  .form {
+    margin: 50px auto;
+    background: $color-bg;
+    border: none;
+  
+    .heading {
       display: flex;
-      flex-direction: column;
+      justify-content: center;
       align-items: center;
+      background: $color-primary;
+      color: white;
+      padding: 2px 0;
+  
+      h2 {
+        margin-left: 10px;
+      }
     }
-
-    .success, .error {
-      padding-top: 1rem;
-      text-align: center;
-    }
-
-    .success {
-      color: $color-green;
-    }
-
-    .error {
-      color: $color-secondary;
+  
+    .formWrapper {
+      margin: 0 auto;
+      flex-direction: column;
+      padding: 40px 0;
+      max-width: 80%;
+  
+      .inputs {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+  
+      .success, .error {
+        padding-top: 1rem;
+        text-align: center;
+      }
+  
+      .success {
+        color: $color-green;
+      }
+  
+      .error {
+        color: $color-secondary;
+      }
     }
   }
 }
