--- a/styles/components/Navbar.module.scss
+++ b/styles/components/Navbar.module.scss
@@ -1,19 +1,34 @@
 @import '../global/variables.module.scss';
 
 .nav {
-  padding: 20px 25px;
+  padding: 10px 25px;
   position: relative;
+
+  @include tablet-landscape {
+    display: flex;
+    justify-content: space-between;
+  }
 
   .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 
+    .brandWrapper {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+    }
+
     .navMenu {
       display: flex;
 
       .mobileMenu {
         font-size: $fontAwesome-mobile;
+
+        @include tablet-landscape {
+          display: none;
+        }
       }
     }
   }
