--- a/styles/components/DesktopMenu.module.scss
+++ b/styles/components/DesktopMenu.module.scss
@@ -14,15 +14,15 @@
 
     li {
       margin-left: 15px;
-      padding-left: 5px;
-      border-left: 2px solid $color-primary;
+      padding: 0 5px 0 5px;
+      
       border-bottom: 2px solid white;
       cursor: pointer;
-      transition: .3s ease-in-out all;
+      transition: .2s ease-in-out all;
     }
 
     li:hover {
-      border-left: 2px solid white;
+      
       border-bottom: 2px solid $color-primary;
     }
   }
