--- a/styles/components/TravelTips.module.scss
+++ b/styles/components/TravelTips.module.scss
@@ -1,20 +1,34 @@
 @import '../global/variables.module.scss';
 
-.travelTips {
-  // margin-top: 190px;
+.wrapper {
 
-  .image {
-    position: relative;
-    margin-bottom: 20px;
-    min-width: 100%;
+  .travelTips {
+    
+    @include tablet-landscape {
+      display: flex;
+      justify-content: space-between;
+      
+    }
 
-    .imageTag {
-      color: white;
-      position: absolute;
-      padding: 0 10px;
-      left: 0;
-      top: 0;
-      background-color: $color-secondary;
+    .image {
+      position: relative;
+      margin-bottom: 20px;
+      min-width: 100%;
+  
+      @include tablet-landscape {
+        min-width: 0;
+        max-width: 48%;
+        // margin: 20px;
+      }
+
+      .imageTag {
+        color: white;
+        position: absolute;
+        padding: 0 10px;
+        left: 0;
+        top: 0;
+        background-color: $color-secondary;
+      }
     }
   }
 }
