--- a/styles/pages/establishments/Establishments.module.scss
+++ b/styles/pages/establishments/Establishments.module.scss
@@ -55,6 +55,10 @@
         .options {
           color: $color-green;
           list-style-type: initial;
+
+          .hiddenListItem {
+            visibility: hidden;
+          }
         }
       }
 
