--- a/styles/pages/establishments/Reservation.module.scss
+++ b/styles/pages/establishments/Reservation.module.scss
@@ -100,6 +100,14 @@
             text-align: center;
             border: none;
           }
+
+          input::-webkit-outer-spin-button,
+          input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+          }
+
+
         }
 
         span {
