--- a/styles/pages/establishments/Nationality.module.scss
+++ b/styles/pages/establishments/Nationality.module.scss
@@ -6,3 +6,10 @@
   border: 1px solid black;
   margin-bottom: 20px;
 }
+
+.nationListError {
+  padding: 25px 0 5px 2px;
+  background: $color-bg;
+  border: 1px solid $color-secondary;
+  margin-bottom: 20px;
+}
