--- a/styles/components/reuse/AdminDash.module.scss
+++ b/styles/components/reuse/AdminDash.module.scss
@@ -48,13 +48,17 @@
         display: flex;
         justify-content: space-between;
         text-align: left;
-    
-        p {
+
+        p, a {
           display: inline-block;
           width: 50%;
           padding: 5px;
           margin: 0;
           border: 1px solid $color-primary;
+        }
+
+        a {
+          border-right: none;
         }
     
         p:nth-of-type(even) {
@@ -63,7 +67,7 @@
           width: 20%;
         }
     
-        p:last-of-type {
+        p:last-of-type, a:last-of-type {
           width: 30%;
         }
       }
@@ -79,14 +83,14 @@
     
       .item:not(:first-of-type) {
         
-        p {
+        p, a {
           border-bottom: none;
         }
       }
     
       .item:last-of-type {
     
-        p {
+        p, a {
           border-bottom: 1px solid $color-primary;
         }
       }
