--- a/styles/components/reuse/AdminDash.module.scss
+++ b/styles/components/reuse/AdminDash.module.scss
@@ -64,11 +64,15 @@
         p:nth-of-type(even) {
           border-left: none;
           border-right: none;
-          width: 20%;
+          width: 35%;
         }
     
         p:last-of-type, a:last-of-type {
           width: 30%;
+        }
+
+        p:hover {
+          cursor: pointer;
         }
       }
     
@@ -98,7 +102,21 @@
 
     .details {
       background: $color-bg;
-      padding: 10px;
+      padding: 10px 30px;
+      
+
+      .detailsItem {
+        display: flex;
+        justify-content: space-between;
+        
+        p {
+          flex: 1;
+        }
+
+        p:first-of-type {
+          font-weight: 700;
+        }
+      }
     }
 
     @include tablet-landscape {
