--- a/styles/pages/home/SearchForm.module.scss
+++ b/styles/pages/home/SearchForm.module.scss
@@ -2,11 +2,24 @@
 
 .formWrapper {
   margin: 50px auto;
-  padding: 30px 10px;
+  padding: 0 0 30px;
   background-color: $color-bg;
   width: 90%;
-  border-radius: 10px;
+  border-radius: 11px 11px 10px 10px;
   box-shadow: 5px 5px 10px rgba(0,0,0,.5);
+
+  .heading {
+    background: $color-secondary;
+    color: white;
+    text-align: center;
+    border-radius: 10px 10px 0 0;
+    padding: 5px 0 3px;
+    margin-bottom: 30px;
+
+    h1 {
+      margin: 0;
+    }
+  }
 
   @include tablet-portrait {
     max-width: 430px;
@@ -18,8 +31,7 @@
     flex-direction: column;
     width: 90%;
     margin: auto;
-
-    
+    padding: 0 10px;
 
     .searchWrap {
       position: relative;
@@ -46,9 +58,22 @@
         left: 0;
         top: 40px;
         width: 100%;
+        border-radius: 0 0 10px 10px;
 
         li {
-          padding: 5px;
+          padding: 7px;
+        }
+
+        li:last-child {
+          border-radius: 0 0 10px 10px;
+        }
+
+        li:hover {
+          background: $color-primary;
+          
+          a {
+            color: white;
+          }
         }
       }
     }
