--- a/styles/pages/admin/Admin.module.scss
+++ b/styles/pages/admin/Admin.module.scss
@@ -8,6 +8,7 @@
 }
 
 .list {
+  min-width: 200px;
   padding: 15px;
   background: $color-bg;
 
@@ -18,5 +19,9 @@
       border-bottom: 1px solid $color-primary;
     }
   }
+}
+
+.active {
+  border-bottom: 1px solid $color-primary;
 }
 
