added cursor to increment/decrement and max rooms and guests to 9

--- a/styles/pages/establishments/Reservation.module.scss
+++ b/styles/pages/establishments/Reservation.module.scss
@@ -95,6 +95,7 @@
           .actionButton {
             font-size: 21px;
             display: inline;
+            cursor: pointer;
           }
 
           input {
