--- a/styles/components/reuse/Button.module.scss
+++ b/styles/components/reuse/Button.module.scss
@@ -5,7 +5,7 @@
   background: $color-secondary;
   margin-top: 1.5rem;
   text-align: center;
-  padding: 12px;
+  // padding: 12px;
   cursor: pointer;
 }
 
@@ -26,6 +26,7 @@
   font-size: $text;
   border-radius: 40px;
   border: none;
+  padding: 12px;
 }
 
 .book {
@@ -39,25 +40,36 @@
   .buttonWrapper {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     
-    .button {
-      flex: 1;
-    }
-
-    .iconBg {
+    a {
       display: flex;
       align-items: center;
-      justify-content: center;
-      float: left;
-      background: $color-primary;
-      border-radius: 100%;
-      width: 40px;
-      height: 40px;
+      justify-content: space-between;
+      height: 100%;
+      width: 100%;
+      padding: 12px;
+
+      .button {
+        
+      }
   
-      .icon {
-        font-size: $fontAwesome-btnIcon;
-        margin-bottom: 3px;
+      .iconBg {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        float: left;
+        background: $color-primary;
+        border-radius: 100%;
+        width: 40px;
+        height: 40px;
+    
+        .icon {
+          font-size: $fontAwesome-btnIcon;
+          margin-bottom: 3px;
+        }
       }
     }
+    
   }
 }
