fixed button click area

--- a/styles/components/reuse/Button.module.scss
+++ b/styles/components/reuse/Button.module.scss
@@ -27,6 +27,16 @@
   border-radius: 40px;
   border: none;
   padding: 12px;
+
+  .buttonWrapper {
+
+    input {
+      display: flex;
+      justify-content: center;
+      height: 100%;
+      width: 100%;
+    }
+  }
 }
 
 .book {
