removed options from establishment overview

--- a/styles/global/variables.module.scss
+++ b/styles/global/variables.module.scss
@@ -12,6 +12,7 @@ $text: 16px;
 /*    COLORS    */
 $color-primary: #213058;
 $color-secondary: #C83259;
+$color-error: #FF7800;
 $color-bg: #F1F1F1;
 $color-green: #28696A;
 
