--- a/styles/pages/establishments/Details.module.scss
+++ b/styles/pages/establishments/Details.module.scss
@@ -84,7 +84,7 @@
           margin-top: 15px;
   
           .danger {
-            color: $color-secondary;
+            color: $color-error;
           }
         }
 
