--- a/styles/pages/establishments/Establishments.module.scss
+++ b/styles/pages/establishments/Establishments.module.scss
@@ -57,7 +57,7 @@
           list-style-type: initial;
 
           .hiddenListItem {
-            visibility: hidden;
+            display: none;
           }
         }
       }
