--- a/styles/components/reuse/AdminDash.module.scss
+++ b/styles/components/reuse/AdminDash.module.scss
@@ -40,7 +40,6 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      margin-bottom: 60px;
       
     
     
@@ -80,9 +79,19 @@
         background: $color-primary;
         color: white;
       }
+
+      .item:hover {
+        background: $color-primary;
+        color: white;
+      }
     
       .item:nth-of-type(odd) {
         background-color: $color-bg;
+      }
+
+      .item:nth-of-type(odd):hover {
+        background: $color-primary;
+        color: white;
       }
     
       .item:not(:first-of-type) {
@@ -123,7 +132,7 @@
       display: flex;
       flex-direction: column;
       flex: 4;
-      margin: 0 5rem;
+      margin: 20px 5rem 0;
     }
   }
 }
