--- a/styles/pages/home/Hero.module.scss
+++ b/styles/pages/home/Hero.module.scss
@@ -1,15 +1,15 @@
 @import '../../global/variables.module.scss';
 
 .hero {
-  margin-bottom: 280px;
-  
+  // margin-bottom: 280px;
+  position: relative;
   
   .bgWrapper {
     position: absolute;
-    top: 36px + 70px;
+    top: -50px;
     height: 60vh;
     max-height: 440px;
-    width: 99vw;
+    width: 100vw;
     max-width: 100%;
     overflow: hidden;
     z-index: -1;
