added login status icon

--- a/styles/components/nav/NavBar.module.scss
+++ b/styles/components/nav/NavBar.module.scss
@@ -32,16 +32,38 @@
         font-size: 14px;
       }
     }
-
     .navMenu {
       display: flex;
 
+      .loggedIn {
+        display: flex;
+        align-items: center;
+
+        .userIcon {
+          color: $color-green;
+        }
+  
+        p {
+          font-size: 14px;
+          margin: 0 15px 0 5px;
+          color: $color-green;
+        }
+      }
+      
       .mobileMenu {
         font-size: $fontAwesome-mobile;
 
         @include tablet-landscape {
           display: none;
         }
+      }
+    }
+
+    @include tablet-portrait {
+      width: 100%;
+      
+      .loggedIn {
+        margin-left: 20px;
       }
     }
   }
