--- a/styles/global/globals.scss
+++ b/styles/global/globals.scss
@@ -72,6 +72,12 @@ input[type='submit'] {
   font-family: 'Nunito';
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 ul {
   list-style: none;
 }
